--- a/gREM_ms_20062014_EMKJ.tex
+++ b/gREM_ms_20062014_EMKJ.tex
@@ -91,29 +91,29 @@ marcus.rowcliffe@ioz.ac.uk
 Acoustic detection, Camera traps, Marine, Population monitoring, Simulations, Terrestrial 
 
 \section{Introduction}
+%Wildlife montoring important (declines in populations, global declines)
+%Wildlife monitoring tech growing in sophication and widespread (remote sensors visual and acoustic)
+%Difficult to estimate abundance and densities (needed for monitoring)
+Animal population density is one of the fundamental measures needed in ecology and conservation. The density of a population has important implications for a range of issues such as sensitivity to stochastic fluctuations \citep{richter1972extinction, wright1983stochastic} and risk of extinction \citep{purvis2000predicting}. Monitoring animal population changes in response to anthropogenic pressure is becoming increasingly important as humans modify habitats and change climates as never before \citep{everatt2014trophic}. % may need more refs 
+Sensor technology, such as camera traps \citep{rowcliffe2008surveys, karanth1995estimating} and acoustic detectors \citep{ofarrel1999comparison, clark1995application, acevedo2006using} are becoming increasingly used to monitor changes in animal populations \citep{rowcliffe2008surveys, kessel2014review}, as they are efficient, relativity cheap and non-invasive \citep{cutler1999using}, allowing for surveys over large areas and long periods. However, the problem of converting sampled count data to estimates of density remains as efforts must be made to account for detectability of the animals \citep{anderson2001need}.
 
-Wildlife montoring important (declines in populations, global declines)
-Wildlife monitoring tech growing in sophication and widespread (remote sensors visual and acoustic)
-Difficult to estimate abundance and densities (needed for monitoring)
-Current methods are often inadequate because of specific data requirements (marked indivudals)
-REM developed for camera trap data, doesnt need this assumptions 
-but has limitations
-Specifically sensor widths - different environments might need more flexibility (examples) and signal directionality assumptions (examples) - method has been optimised for terrestrial large animals
-acoustic monitoring becoming more common method of monitoring but has additional sensor width problems (examples) and directionality of signals (examples). 
-Currently the count data from acoustic monitoring is used for monitoring in different ways (examples). 
-Another limitation to using these sensors is lack of guidelines on how survey effort impacts the accuracy and precision of estimates (guidelines would be useful. practically can only be done within simulated environment, rarely done)
-We develop gREM and tested it and come up with specific recommedations for its use (providing code for implementation). we controlled for different animal movement by testing the robustness of gREM with different movement model (examples).
 
-Animal population size is one of the fundamental measures needed in ecology and conservation. The absolute size of a population has important implications for a range of issues such as genetic diversity \citep{o1985genetic, fischer2000genetic, willi2005threefold}, sensitivity to stochastic fluctuations \citep{richter1972extinction,wright1983stochastic} and risk of extinction \citep{purvis2000predicting}. Sensor technology, such as camera traps \citep{rowcliffe2008surveys,ahumada2011community} and acoustic detectors \citep{ofarrel1999comparison,mellinger2007fixed,jones2011indicator} are becoming increasingly used to survey animal populations, as they are efficient, relativity cheap and non-invasive \citep{gese2001monitoring, o2003crouching, silveira2003camera}, allowing for surveys over large areas and long periods. 
+%Current methods are often inadequate because of specific data requirements (marked indivudals)
+%REM developed for camera trap data, doesnt need this assumptions 
+%but has limitations
+%Specifically sensor widths - different environments might need more flexibility (examples) and signal directionality assumptions (examples) - method has been optimised for terrestrial large animals
+Methods do already exist for estimating animal density if the distance between the animal and the sensor can be estimated (e.g., capture-mark recapture methods \citep{karanth1995estimating} and distance sampling \citep{harris2013applying}). However, these methods often require additional information that may not be available. For example, capture-mark-recapture methods \citep{karanth1995estimating, trolle2003estimation, soisalo2006estimating, trolle2007camera} require recognition of individuals; distance methods require a distance estimation of how far away individuals are from the sensor {barlow2005estimates, marques2011estimating}. The development of the random encounter model (REM) (a modification of a gas model) enabled animal densities to be estimated from unmarked individuals of a known speed, and sensor detection parameters \citep{rowcliffe2008estimating}. The REM method has been successfully applied to estimate animal densities from camera trap surveys \citep{manzo2012estimation, zero2013monitoring}. However, extending the REM method to other types of sensors (for example acoustic detectors) is more problematic, because the original derivation assumes a relatively narrow sensor width (up to $\pi/2$ radians) and that the animal is equally detectable irrespective of its heading (ref). % Find this ref is tricky!
 
-% @liz karanth1995 here wasn't in the bib file. I think it's karanth1995Estimating, but thought I should check.
-However, the problem of converting sampled count data to estimates of density remains. The preferred method for estimating density if individuals can be recognised is capture-recapture e.g. \citep{karanth1995Estimating, trolle2003estimation, soisalo2006estimating, trolle2007camera}. If individual recognition is impossible but the distance between animal and sensor can be estimated, distance sampling methods can be used to estimate density, although these often ignore animal movement which may bias estimates \citep{barlow2005estimates, marques2011estimating}. Finally, methods for density estimation, based on ideal gas models (originally formulated by physicists to estimate contact rates between molecules) have been developed \citep{yapp1956theory, Hutchinson_Waser_2007}. The gas model has been modified for use with camera traps, which have an angle of detection (the angle within which an animal can be detected)  up to $\pi$ radians \citep{rowcliffe2008estimating}. This angle limitation may not apply to acoustic sensors. Furthermore, animal calls may be directional, and the existing random encounter model (REM) designed for camera trap data does not handle this case.
+Whilst these restrictions are not problematic for most camera trap makes (e.g. Reconyx, Cuddeback), the REM could not be used to estimate densities from camera traps with a wider sensor width (e.g. canopy monitoring with fish eye lens \citep{brusa2014increasing}). Additionally, the REM method would not be useful in estimating densities from acoustic survey data as the acoustic detector angles are often wider than $\pi/2$ radians.  Acoustic detectors are designed for a range of diverse tasks and environments \citep{kessel2014review}, which will naturally lead to a wide range of sensor detection widths and detection distances. In addition to this, calls emitted by many animals are directional (breaking the assumption of the REM method). 
 
-%Some species are much more easily detected or identified by acoustic detectors. For example, while bat identification by hand requires much training, methods are being developed to automatically identify species from their calls \citep{Adams_2010,walters_2012}. With respect to distance (or the radius of detection), large Cetaceans are loud enough to detected from tens of kilometres away, further than is possible visually \citep{clark1995application, mcdonald2004difar,barlow2005estimates}.  
+%acoustic monitoring becoming more common method of monitoring but has additional sensor width problems (examples) and directionality of signals (examples). 
+%Currently the count data from acoustic monitoring is used for monitoring in different ways (examples). 
+There has been a sharp rise in interest around passive acoustic detectors in recent years, with a 10 fold increase in publications in the decade between 2000 and 2010 \citep{kessel2014review}. Acoustic monitoring is being developed to study many aspects of ecology, including the interactions of animals and their environments \citep{blumstein2011acoustic, rogers2013density}, the presence and relative abundances of species \citep{marcoux2011local}, and biodiversity of an area \citep{depraetere2012monitoring}. 
 
-%However, many authors highlight the need to consider detectability when estimating density, since failure to do so will usually give biased results. In particular, this bias has been highlighted as a problem for the interpretation of count rates from sensors such as camera traps \citep{jennelle2002use, foster2012critique}.
+Acoustic data suffers from many of the problems associated with data from camera trap surveys in that individuals are often unmarked so capture-make-recapture methods cannot be used to estimate densities. In some cases the distance between the animal and the sensor is known, for example when an array of sensors and the position of the animal is estimated by triangulation \citep{lewis2007sperm}. In these situations distance-sampling methods can be applied, a method typically used for marine mammals \citep{rogers2013density}. However, in many cases distance estimation is not possible, for example when single sensors are deployed, a situation typical in the majority of terrestrial acoustic surveys  \citep{elphick2008you, buckland2008estimating}. In these cases, only relative measures of local abundance can be calculated, and not absolute densities. This means that comparison of populations between species and sites is problematic without assuming equal detectability \citep{schmidt2003count}. %Poor reference but the best that I could find
+Equality detectability is unlikely because of differences in environmental conditions, sensor type, habitats, species biology. 
 
-In this study we create a generalised REM (gREM), as an extension to the camera trap model of \citep{rowcliffe2008estimating}, to estimate absolute density from count data from acoustic detectors, or camera traps, where the sensor angle can vary from 0 to $2\pi$ radians, and the acoustic signal given off from the animal can be directional (we call the width of an animals acoustic call the call angle).  We tested the model using simulations in order to assess the validity of the models and in order to give suggestions for best practice. Specifically, we test that the analytical model can accurately predict density when the assumptions of a homogeneous environment and straight-line animal movement are met. We went on to test the accuracy of the model if the assumptions about animal movement were broken, including non-continuous movement and correlated and random walks. 
+In this study we create a generalised REM (gREM), as an extension to the camera trap model of \citep{rowcliffe2008estimating}, to estimate absolute density from count data from acoustic detectors, or camera traps, where the sensor width can vary from 0 to $2\pi$ radians, and the signal given off from the animal can be directional. We assessed the accuracy and precision of the gREM within a simulated environment, by varying the sensor detection widths, animal signal widths, number of captures and models of animal movement. We use the simulation results to recommend best survey practice for estimating animal densities from remote sensors. 
 
 \section{Methods}
 
@@ -198,8 +198,8 @@ Starting from $x_1 = \pi/2$ the size of profile is $2r\sin \alpha/2$ (Figure~\re
 We have therefore characterised the profile width for $\pi$ radians of rotation (from directly towards the sensor to directly behind the sensor). To find the average profile width for all angles of approach, we integrate these functions over their appropriate intervals of $x_1$ and divide by $\pi$ to give:
 
 \begin{align}
-    \bar{p} &=\frac{1}{\pi} \left(\int\limits_{\frac{\pi}{2}}^{\frac{\pi}{2} + \frac{\theta}{2} - \frac{\alpha}{2}}2 r \sin{\left (\frac{\alpha}{2} \right )}\;\mathrm{d}x_1+\int\limits_{\frac{\pi}{2} + \frac{\theta}{2} - \frac{\alpha}{2}}^{\frac{5 \pi}{2} - \frac{\theta}{2} - \frac{\alpha}{2}}r \sin{\left (\frac{\alpha}{2} \right )} + r \cos{\left (x_1 - \frac{\theta}{2} \right )}\;\mathrm{d}x_1+\int\limits_{\frac{5 \pi}{2} - \frac{\theta}{2} - \frac{\alpha}{2}}^{\frac{3 \pi}{2}}2 r \sin{\left (\frac{\alpha}{2} \right )}\;\mathrm{d}x_1\right) \nonumber  \\
-     &= \frac{r}{\pi} \left(\theta \sin{\left (\frac{\alpha}{2} \right )} - \cos{\left (\frac{\alpha}{2} \right )} + \cos{\left (\frac{\alpha}{2} + \theta \right )}\right) \label{e:p321}
+    \bar{p} &=\frac{1}{\pi} \left(\int\limits_{\frac{\pi}{2}}^{\frac{\pi}{2} + \frac{\theta}{2} - \frac{\alpha}{2}}2 r \sin{\frac{\alpha}{2} }\;\mathrm{d}x_1+\int\limits_{\frac{\pi}{2} + \frac{\theta}{2} - \frac{\alpha}{2}}^{\frac{5 \pi}{2} - \frac{\theta}{2} - \frac{\alpha}{2}}r \sin{\frac{\alpha}{2} } + r \cos{\left (x_1 - \frac{\theta}{2} \right )}\;\mathrm{d}x_1+\int\limits_{\frac{5 \pi}{2} - \frac{\theta}{2} - \frac{\alpha}{2}}^{\frac{3 \pi}{2}}2 r \sin{\frac{\alpha}{2} }\;\mathrm{d}x_1\right) \nonumber  \\
+     &= \frac{r}{\pi} \left(\theta \sin{\frac{\alpha}{2} } - \cos{\frac{\alpha}{2} } + \cos{\left (\frac{\alpha}{2} + \theta \right )}\right) \label{e:p321}
 \end{align}
 
 Here the three integrals correspond to Figures \ref{f:firstInt}, \ref{f:secondInt} and \ref{f:thirdInt} respectively. Then, as with the gas model, this term is used to calculate density
@@ -209,7 +209,7 @@ D = z/vt\bar{p}
 \end{equation}
 We can also see what causes this model to be discontinuously different to SE3. Examine the profile at $x_1 = 	\theta/2 + \pi/2$ (the profile is perpendicular to the edge of the blind spot.) We see that there is potentially a case where the left side of the profile is $r\sin \alpha/2$ while the right side is zero. This profile does not exist if we return to the full $2r\sin \alpha/2$ profile before $x_1  = \theta/2 + \pi/2$. Therefore we solve $5\pi/2 - \theta/2 - \alpha/2 <  \theta/2 + \pi/2$. We find that this new profile only exists if $ \alpha < 4\pi - 2 \theta$. This inequality defines the line separating models SE2 and its neighbouring model, SE3.
 
-While specification of the models had to be done by hand, the calculation of the solutions was done using SymPy \citep{sympy} in Python. The models were checked for errors with a number of tests. The models were checked against each other by checking that models which are adjacent in parameter space are equal at the boundary between them (e.g., \ref{e:p321} is equal to 2r as in the gas model when $\alpha=\pi$ and $\theta=2\pi$). Models that border $ \alpha = 0$ should have $p = 0$ when $ \alpha = 0$ and this was checked for (e.g., \ref{e:p321} is 0 when $\alpha=0$ and $\theta=2\pi$). We checked that all solutions are between 0 and $2r$ and that each integral, divided by the range of angles that it is integrated over is between 0 and $2r$. These tests are included in Appendix S3), and all derivations in full are included in Appendix S2 with computer algebra scripts in Appendix S3, and the R \citep{Rcore} script for the gREM in Appendix S4.  
+While specification of the models had to be done by hand, the calculation of the solutions was done using SymPy \citep{sympy} in Python. The models were checked for errors with a number of tests. The models were checked against each other by checking that models which are adjacent in parameter space are equal at the boundary between them (e.g., \ref{e:p321} is equal to 2r as in the gas model when $\alpha=\pi$ and $\theta=2\pi$). Models that border $ \alpha = 0$ should have $p = 0$ when $ \alpha = 0$ and this was checked for (e.g., \ref{e:p321} is 0 when $\alpha=0$ and $\theta=2\pi$). We checked that all solutions are between 0 and $2r$ and that each integral, divided by the range of angles that it is integrated over is between 0 and $2r$. These tests are included in Appendix S3), and all derivations in full are included in Appendix S2 with computer algebra scripts in Appendix S3, and the R \citep{R} script for the gREM in Appendix S4.  
 
 %delete or reformat within the current version of figure 1
 \begin{comment}
